fix dark mode color

--- a/src/main/webapp/app/shared/link-preview/components/link-preview/link-preview.component.scss
+++ b/src/main/webapp/app/shared/link-preview/components/link-preview/link-preview.component.scss
@@ -63,7 +63,6 @@
 .preview-card {
     flex-direction: row;
     padding: 10px;
-    background-color: #fff;
     position: relative;
 }
 
